# avrospeclib

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.in
src/: __init__.py  avro_schemas.py  pydantic_model.py
src/assets/: README.md  mzlib.avsc  spectrum.avsc
tests/data/: chinese_hamster_hcd_selected_head.mzlb.json  get_data.zsh
utils/: generate_schema.py
